fix a grid box layout problem

--- a/style/style.css
+++ b/style/style.css
@@ -484,6 +484,7 @@
 
     .grid-container{
         grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: auto;
         padding: 20px;
     }
     #f1-grid{
